0.2-2
- rename beamAttenuateAdp() as beamUnattenuateAdp()
0.2-1
- camel-case function and argument names (and, retroactively, this NEWS file)
0.1-83
- add binAverage()
- fillGap(): add 'rule' argument (analogous to same for approx())
- add rescale()
- read.pt(): fix timing error; use as.pt() to create return value
- add as.pt()
- read.adp.rdi() uses checksums
- number.as.POSIXct(type="gps"): account for leap seconds
0.1-82
- remove warning that occurs for R 2.13.0 (alpha)
- number.as.POSIXct(): accept GPS times
- rename e.g. adv.2enu() as to.enu.adv()
- speed up conversion of ADP and ADV to enu by more than a factor of 10
- change RDI coordinate handling
- rename match.bytes() as matchBytes()
- add drawpalette()
- remove matlab2POSIXt(), now a sub-case of number.as.POSIXct()
- number.as.POSIXct(): added
- oceBiset(): added
- despike(): add argument 'action'
- detrend(): added
- read.adp.sontek(): handle PCADP type
- read.adp.sontek.serial(): added
- read.section(): handle WOCE quality flags for salinity
- retime(): added
- read.adv.sontek.serial(): correct error in class of 'a' and 'c'
- despike(): use string value for argument 'method'
- logger.toc(): fix bug in discovering files ranging over days
- as.ctd(): make temperature and salinity into vectors, if not already
- plot.TS(): add argument 'use.smoothScatter'
- oceDebug(): flush the console after printing a message
- sw.theta(): rename the method possibilities, to be lower case, without dates
- in some sw functions, rename 'pref' as 'reference.pressure'
- read.ctd(): fix bug in getting start.time for some time formats
- pwelch() added
- plot.sealevel(): make y axis obey range in data subset, if xlim is given
- adp.2enu() added
- coastline.world: improve resolution by a factor of 4 or so
- read.ctd.woce(): infer water depth as max(pressure) if it's not in the header
- section.smooth(): handle misordered stations; handle missing values better